--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#FF6A6A</color>
     <color name="colorPrimaryDark">#ff5252</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FF6A6A</color>
 </resources>
