--- a/app/src/main/res/layout/clidview.xml
+++ b/app/src/main/res/layout/clidview.xml
@@ -32,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="center"
-                android:src="@drawable/ic_play_arrow_red_700_48dp"/>
+                android:src="@drawable/ic_play"/>
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
