--- a/app/src/main/res/layout/clidview.xml
+++ b/app/src/main/res/layout/clidview.xml
@@ -31,8 +31,7 @@
             <ImageView android:id="@+id/btnYoutube_player"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="center"
-                android:src="@drawable/ic_play"/>
+                android:scaleType="center" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
