--- a/app/src/main/res/layout/activity_blessing.xml
+++ b/app/src/main/res/layout/activity_blessing.xml
@@ -10,6 +10,7 @@
         android:id="@+id/name"
         android:inputType="textCapWords"
         android:layout_margin="@dimen/_15sdp"
+        android:drawableLeft="@drawable/ic_name"
         android:drawablePadding="@dimen/_5sdp"
         android:hint="Name"/>
 
