--- a/app/src/main/res/layout/clidview.xml
+++ b/app/src/main/res/layout/clidview.xml
@@ -31,7 +31,8 @@
             <ImageView android:id="@+id/btnYoutube_player"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="center" />
+                android:scaleType="center"
+                android:src="@drawable/ic_play"/>
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
